--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="BubbleSort.cpp">
       <Filter>Sort</Filter>
     </ClCompile>
+    <ClCompile Include="BFS.cpp">
+      <Filter>Search\BFS</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utility.h">
